<resources>
    <string name="app_name">IAP_Lib</string>
    <string name="wigp_language">Lanuage :</string>
    <string name="wigp_enter_igp">Enter IGP</string>
    <string name="action_settings">Settings</string>
    <string name="wigp_loading">Loading</string>
    <string name="wigp_game_view_hint">TOUCH HERE TO GET IT!</string>
    <string name="wdigp_button_OK">OK</string>
    <string name="wdigp_button_Cancel">Cancel</string>
    <string name="wdigp_no_game_available">"Sorry, the game is not available now.
Please visit us at wapshop.gameloft.com to get more games!"</string>
    <string name="wdigp_condition_notify">"THIS GAME WILL COSTS $1 (+1 SMS COST). TO PURCHASE TAP HERE FOR TERM  CONDITIONS"</string>
    <string name="wdigp_touch_here_SFR">TOUCHEZ POUR OBTENIR!</string>
    <string name="cs_title">Select Country and Carrier</string>
    <string name="cs_label_country">Country:</string>
    <string name="cs_label_operator">Carrier:</string>
    <string name="cs_btn_ok">OK</string>
    <string name="cs_btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_canel">Cancel</string>
    <string name="title_payment_selection">Select payment method</string>
    <string name="credit_card">Credit card</string>
    <string name="cnt_resend_confirmation_india">An SMS charge of Rs. 3/- will be applicable. Are you sure?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="CODE">EN</string>
    <string name="GAME_STARTUP">Thanks for stopping by, parents! NameOfTheGame is free to download and play. You can open up bonus content for even more fun by purchasing NameOfTheSoftCurrency and NameOfTheHardCurrency. To learn how to control in-app purchases, please visit the Help section. By playing the game, you acknowledge that you have read and understood the License Agreement in the store for this app and accept all of its terms.</string>
    <string name="GAME_STARTUP_WITHOUT_SOFTCURRENCY">Thanks for stopping by, parents! [Name of the game] is free to download and play. You can open up bonus content for even more fun by purchasing NameOfTheHardCurrency. To learn how to control in-app purchases, please visit the Help section. By playing the game, you acknowledge that you have read and understood the License Agreement in the store for this app and accept all of its terms.</string>
    <string name="HELP_SECTION">Thanks for stopping by, parents! NameOfTheGame is free to download and play. You can open up bonus content for even more fun by purchasing NameOfTheSoftCurrency and NameOfTheHardCurrency. If thats not cool with you, you can control this kind of transaction for your kids simply by adjusting your device settings. Just like that, you have total control over what can or cant be bought in the game. Note that it is Gamelofts policy to put a cap on in-app purchases to prevent accidental or duplicate purchases.</string>
    <string name="HELP_SECTION_WITHOUT_SOFTCURRENCY">Thanks for stopping by, parents! [Name of the game] is free to download and play. You can open up bonus content for even more fun by purchasing NameOfTheHardCurrency. If thats not cool with you, you can control this kind of transaction for your kids simply by adjusting your device settings. Just like that, you have total control over what can or cant be bought in the game.</string>
    <string name="HELP_SECTION_GOOGLEPLAY">"Passwords are a great way to make sure nobody but you can make in-app purchases on Google Play. Here are some quick steps to do this: - Go to Google Play >> Press the Menu Key >> Settings >> User Controls - Select Use PIN for Purchases or Password (you will be asked to enter your password) Naturally, its a good idea to keep your password a secret, even from your kids.
Please review your devices user manual or contact your device manufacturer for additional information. Note that it is Gamelofts policy to put a cap on in-app purchases to prevent accidental or duplicate purchases."</string>
    <string name="HELP_SECTION_AMAZON">"A great way to prevent accidental in-app purchases is to require your Amazon password before making any. Just follow these quick steps: - Go to the Amazon Appstore >> Press the Menu Key >> Settings >> Parental Controls - Set Enable Parental Controls to On (youll be asked to enter your existing Amazon password)
Naturally, its a good idea to keep your password a secret, even from your kids. Note that it is Gamelofts policy to put a cap on in-app purchases to prevent accidental or duplicate purchases."</string>
    <string name="COSTS_REAL_MONEY">Costs real money</string>
    <string name="IAP_SAMSUNG_DIALOG_TITLE">In-App Purchase</string>
    <string name="IAP_SAMSUNG_UPGRADE_REQUIRED">Samsung In-App Purchase upgrade required. Do you want to proceed?</string>
    <string name="IAP_SAMSUNG_CLIENT_NOT_INSTALLED">Samsung In-App Purchase not installed on this device. Do you want to install?</string>
    <string name="IAP_SAMSUNG_APP_STORE_NOT_INSTALLED">"The Samsung Store service is not available at this time. You can continue to use this app, but you won't be able to make any purchases."</string>
    <string name="IAP_SAMSUNG_ERROR_ALREADY_PURCHASED">This item was already purchased. It will not be charged to your account.</string>
    <string name="IAP_SAMSUNG_WAITING">Please wait...</string>
    <string name="IAP_SAMSUNG_OK_BUTTON">Ok</string>
    <string name="IAP_SAMSUNG_CANCEL_BUTTON">Cancel</string>
    <string name="k_glorder">GLOrder</string>
    <string name="k_smsIntendName">SMS_SENT</string>
    <string name="k_acceptheaderec11">application/com.gameloft.ecomm.android.iap-v1.1+plain</string>
    <string name="k_acceptheaderec12">application/com.gameloft.ecomm.android.iap-v1.2+plain</string>
    <string name="k_acceptheaderec13">application/com.gameloft.ecomm.android.iap-v1.3+plain</string>
    <string name="k_headerUserAgent">User-Agent</string>
    <string name="k_headerSubno">x-up-gl-subno</string>
    <string name="k_headerBuildModel">x-android-os-build-model</string>
    <string name="k_headerIMEI">x-up-gl-imei</string>
    <string name="k_headerHDIDFV">x-up-gl-hdidfv</string>
    <string name="k_headerD">x-gl-d</string>
    <string name="k_headerLineID">x-up-calling-line-id</string>
    <string name="k_headerMSISDN">x-up-gl-msisdn</string>
    <string name="k_headerCredential">x-up-gl-fed-credentials</string>
    <string name="k_headerFedClientID">x-up-gl-fed-client-id</string>
    <string name="k_headerSimOperator">x-up-gl-sim-operator</string>
    <string name="k_headerSimOperatorName">x-up-gl-sim-operator-name</string>
    <string name="k_headerSimCountryIso">x-up-gl-sim-country-iso</string>
    <string name="k_headerNetworkOperator">x-up-gl-network-operator</string>
    <string name="k_headerNetworkOperatorName">x-up-gl-network-operator-name</string>
    <string name="k_headerNetworkCountryIso">x-up-gl-network-country-iso</string>
    <string name="k_headerNetworkRoaming">x-up-gl-is-network-roaming</string>
    <string name="k_headerTime">time</string>
    <string name="k_headerGGI">x-up-gl-ggi</string>
    <string name="k_headerPurchaseID">x-up-gl-purchaseid</string>
    <string name="k_headerIfNoneMatch">If-None-Match</string>
    <string name="k_headerContentType">Content-Type</string>
    <string name="k_headerContentLength">Content-Length</string>
    <string name="k_headerEtag">ETag</string>
    <string name="k_headerAccept">Accept</string>
    <string name="k_headerXApp">X-App</string>
    <string name="k_headerXAppVersion">X-App-Version</string>
    <string name="k_headerXAppProductId">X-App-Product-Id</string>
    <string name="k_headerXAppNounce">X-App-Nounce</string>
    <string name="k_headerXAmazonUserId">x-amazon-user-id</string>
    <string name="k_headerXInAppHash">X-InApp-Hash</string>
    <string name="k_headerGameCode">x-up-gl-gamecode</string>
    <string name="k_headerUAndroid">uandroid</string>
    <string name="k_headerGLAcnum">x-up-gl-acnum</string>
    <string name="k_headerGLAnonCredentials">x-up-gl-anon-credentials</string>
    <string name="k_headerAcceptEncoding">Accept-Encoding</string>
    <string name="k_kSMS">SMS</string>
    <string name="k_ksecret">Secret</string>
    <string name="k_kcc">CC</string>
    <string name="k_kdefaultKey">DefaultKey</string>
    <string name="k_kCCBillingKey">CCBillingKey</string>
    <string name="k_ServiceKey">ServiceKey</string>
    <string name="k_SaltKey">SaltKey</string>
    <string name="k_ExtraKey1">JeP1%@!$8r#Q</string>
    <string name="k_ExtraKey2">l4@$#8#H%$tH</string>
    <string name="k_ExtraKey3">jSue%*$Kql93</string>
    <string name="k_GoogleDeveloperKey">IAP-GoogleDeveloperKey</string>
    <string name="k_CRMKey">IAP-CRMKey</string>
    <string name="k_EmbeddedProfilesPath">EmbeddedProfilesPath</string>
    <string name="k_EmbeddedTNCPath">EmbeddedTNCPath</string>
    <string name="k_EmbeddedFlowTextPath">EmbeddedFlowTextPath</string>
    <string name="k_EmbeddedContentPath">EmbeddedContentPath</string>
    <string name="k_kCCTotalMoneyParamName">extra_1=</string>
    <string name="k_kCCProfileIdParamName">extra_2=</string>
    <string name="k_kCCCurrencyParamName">extra_6=</string>
    <string name="k_getParamGame">game</string>
    <string name="k_getParamNetworkCountryIso">network_country_ISO</string>
    <string name="k_getParamNetworkOperator">network_operator</string>
    <string name="k_getParamNetworkOperatorName">network_operator_name</string>
    <string name="k_getParamSimCountryIso">sim_country_iso</string>
    <string name="k_getParamSimOperator">sim_operator</string>
    <string name="k_getParamSimOperatorName">sim_operator_name</string>
    <string name="k_getParamLineNum">line_number</string>
    <string name="k_getParamNetworkRoaming">is_network_roaming</string>
    <string name="k_getParamAndroidDevice">android_build_device</string>
    <string name="k_getParamAndroidModel">android_build_model</string>
    <string name="k_getParamSpWap">supportswap</string>
    <string name="k_getParamGameVersion">game_version</string>
    <string name="k_getParamLang">lang</string>
    <string name="k_getParamD">d</string>
    <string name="k_getParamSpCC">supportscc</string>
    <string name="k_getParamSpWapOther">supports_wapother</string>
    <string name="k_getParamSpPaypal">supports_paypal</string>
    <string name="k_getParamSpAmazon">supports_amazon</string>
    <string name="k_getParamSpOem">supportsoem</string>
    <string name="k_getParamSpSMS">supports_sms</string>
    <string name="k_getParamSpHTTP">supports_http</string>
    <string name="k_getParamSpUMP">supports_ump</string>
    <string name="k_getParamSpShenzhoufu">supports_shenzhoufu</string>
    <string name="k_getParamSpCCPrices">supports_ccprices</string>
    <string name="k_getParamProfileText">profile_texts</string>
    <string name="k_getParamPricePostFix">price_postfix</string>
    <string name="k_getParamItemDelivered">b=itemdelivered</string>
    <string name="string_ask_new_version">"A new version of the widget is available.
Please update to stay tuned for our latest games."</string>
    <string name="string_COMMAND_YES">YES</string>
    <string name="string_COMMAND_NO">NO</string>
    <string name="MIDlet_Name">Kingdoms &amp; Lords</string>
    <string name="COMMAND_NEXT">Next</string>
    <string name="COMMAND_EXIT">Exit</string>
    <string name="MENUITEM_BUY_FULL_VERSION">Get the game</string>
    <string name="MENUITEM_ENTER_PIN">Enter purchase code</string>
    <string name="MENUITEM_EXIT">Exit</string>
    <string name="MENUITEM_PLAY_GAME">Play the game</string>
    <string name="MENUITEM_LANGUAGE">Language</string>
    <string name="MAINTEXT_DEMO_ENDED">Did you like the game?</string>
    <string name="MAINTEXT_INSTALL">You must install the data for $ before you continue.</string>
    <string name="MAINTEXT_UNLOCK_SUCCESS_SILENT">Purchase successful. Enjoy the game!</string>
</resources>