<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_autodectect_country" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:id="@id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="left|center" android:id="@id/tvCountry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/cs_label_country" />
            <Spinner android:gravity="left|center" android:id="@id/gdc_spin_autodetect_dialog_country" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="@dimen/cs_spinner_width" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" />
        </TableRow>
        <TableRow android:id="@id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="left|center" android:id="@id/tvOperator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/cs_label_operator" />
            <Spinner android:gravity="left|center" android:id="@id/gdc_spin_autodetect_dialog_operator" android:layout_width="@dimen/cs_spinner_width" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" />
        </TableRow>
        <TableRow android:id="@id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/cs_btn_autodetect_country_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cs_btn_cancel" android:layout_weight="1.0" />
            <Button android:id="@id/cs_btn_autodetect_country_ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cs_btn_ok" android:layout_weight="1.0" />
        </TableRow>
    </TableLayout>
</LinearLayout>
