<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/FrameLayout00" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:id="@id/FrameLayoutDialog" android:background="@drawable/splash" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <FrameLayout android:id="@id/FrameLayout01" android:background="@drawable/background_alpha_box" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip">
                <Button android:layout_gravity="left|bottom" android:id="@id/bt_ly_confirm_update_yes" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/string_COMMAND_YES" />
                <Button android:layout_gravity="right|bottom" android:id="@id/bt_ly_confirm_update_no" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/string_COMMAND_NO" />
                <TextView android:textSize="@dimen/download_dialog_title_text_size" android:textColor="#ff000000" android:gravity="center_horizontal" android:id="@id/txtGameTitle" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="30.0dip" android:text="@string/MIDlet_Name" />
                <TextView android:textColor="#ff000000" android:gravity="center" android:id="@id/txtDownloadQ" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="30.0dip" android:text="@string/string_ask_new_version" />
            </FrameLayout>
        </FrameLayout>
    </FrameLayout>
</LinearLayout>
