<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@android:style/Theme.Dialog" android:orientation="vertical" android:id="@id/gdc_layout_dialog" android:background="@drawable/wigp_background_dialog" android:layout_width="250.0dip" android:layout_height="250.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.8">
        <TextView android:gravity="center" android:id="@id/wdigp_tv_dialog_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wdigp_no_game_available" />
    </LinearLayout>
    <RelativeLayout android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="5.0dip" android:layout_weight="0.2">
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="5.0dip">
            <Button android:id="@id/wdigp_btn_dialog_cancel" android:background="@android:color/white" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/wdigp_button_Cancel" />
            <Button android:id="@id/wdigp_btn_dialog_yes" android:background="@android:color/white" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/wdigp_button_OK" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
